# di4c

./: LICENSE  README.md
maskgit-pytorch/: README.md  di4c_main.py
maskgit-pytorch/Metrics/: sample_and_eval.py
maskgit-pytorch/Network/: transformer.py
maskgit-pytorch/Trainer/: vit.py
sdtt/: README.md  pyproject.toml  requirements.yaml
sdtt/src/sdtt/: __init__.py  harness_gpt2.py  loading_utils.py  main.py  run_eval.py  utils.py
sdtt/src/sdtt/configs/: config.yaml
sdtt/src/sdtt/configs/model/: ar-orig-large.yaml  ar-orig-medium.yaml  ar-orig-small.yaml  dit-orig-large.yaml  dit-orig-medium.yaml  dit-orig-small.yaml
sdtt/src/sdtt/configs/parameterization/: multi-round-sdtt.yaml
sdtt/src/sdtt/configs/strategy/: ddp.yaml
sdtt/src/sdtt/core/: ar.py  core.py
sdtt/src/sdtt/core/diffusion/: __init__.py  absorbing.py
sdtt/src/sdtt/core/distill/: __init__.py  multi_round_sdtt.py
sdtt/src/sdtt/core/sampling/: analytic.py  ancestral.py
sdtt/src/sdtt/data/: dataloader.py  datasets.py  legacy_dataloader.py  samplers.py  utils.py
sdtt/src/sdtt/models/: ar_orig.py  dit_orig.py  loading_utils.py
sdtt/src/sdtt/models/modules/: transformer_hybrid.py
tauldr/: README.md  tldr_env.yml  train_distil.py
tauldr/cifar10/config/: config_001.yaml
tauldr/config/eval/: cifar10.py  cifar10_elbo.py
tauldr/config/train/: cifar10.py  cifar10_distributed.py  distil_cifar10.py
tauldr/lib/datasets/: datasets.py
tauldr/lib/loggers/: loggers.py
tauldr/lib/losses/: losses.py
tauldr/lib/models/: models.py
tauldr/scripts/: distil_sample.py
(+4 files in other folders)
